# Project-Rufus

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  demo.py  demo_no_gpu.py  photo_morph_demo.py
rufus/: __init__.py  audio.py  cli.py  config.py  display.py  generator.py  interpolation.py  motion.py  pipeline.py  prompts.py  reactivity.py  video.py
tests/: test_audio.py  test_components.py  test_generator_integration.py  test_reactivity.py  test_video.py
